Typos y correcciones menores

--- a/rolando.tex
+++ b/rolando.tex
@@ -10,17 +10,17 @@ En dicha charla, García menciona que:
 
 Con lo cual me inclino a pensar que García entiende, como Bayer, que la conquista de la autonomía de los países en vías de desarrollo no se puede lograr de manera vegetativa, sin tomar acciones concretas al respecto. Es necesario buscar nuevas alternativas que permitan romper el ciclo de dependencia (lo que Bayer llama, explotar las potencialidades existentes).
 
-Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista ( y luego mantenimiento) de la autonomía.
+Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista (y luego mantenimiento) de la autonomía.
 
 Con respecto a la autonomía universitaria, García dice:
 
 \begin{itemize}
     \item ``Tener claro en qué consistía la autonomía universitaria y por qué era indispensable defenderla nos permitió negociar con diversas instituciones, incluso extranjeras, para obtener subsidios sin quedar subordinados a las decisiones que muchos intentaron imponer junto con los financiamientos''.
-    \item ``Pero la autonomía no significaba, para nosotros, el aislamiento ante los problemas del país y del mundo. Casualmente, revisando en estos días viejos papeles, encontré un documento que vale la pena citar porque tiene que ver, precisamente, con las implicaciones políticas de nuestra posición. Mientras yo mantenía relación con la Fundación Ford y con otras organizaciones norteamericanas, en el año 1965 tuvo Lugar La invasión a Santo Domingo. En la Facultad de Ciencias Exactas y Naturales, expresamos nuestra condena con actos públicos''.
+    \item ``Pero la autonomía no significaba, para nosotros, el aislamiento ante los problemas del país y del mundo. Casualmente, revisando en estos días viejos papeles, encontré un documento que vale la pena citar porque tiene que ver, precisamente, con las implicaciones políticas de nuestra posición. Mientras yo mantenía relación con la Fundación Ford y con otras organizaciones norteamericanas, en el año 1965 tuvo lugar la invasión a Santo Domingo. En la Facultad de Ciencias Exactas y Naturales, expresamos nuestra condena con actos públicos''.
     % \item ``Cuando nos propusimos reconstruir la Universidad, en los años 50, enfrentamos una situación comparable en cierta medida. No era suficiente con modificar los planes de estudio, construir nuevos edificios y sustituir el personal docente y administrativo. Era necesario replantear La estructura de la institución, sus objetivos y su funcionamiento, para lo cual se requería mantener a ultranza la autonomía de la gestión. A partir de allí, \textbf{construir lo posible} significó encontrar los medios necesarios para poner en práctica la profunda reforma que nos planteamos como meta''
 \end{itemize}
 
-Creo firmemente que en este punto García estaría de acuerdo con la posición de Bayer, en que \textit{la política tecnológica deberá buscar satisfacer las necesidades sociales, buscando un aumento de la calidad en la vida de la población y no solo el aumento de la producción como meta principal}.
+Creo firmemente que en este punto García estaría de acuerdo con la posición de Bayer, en que \textit{la política tecnológica deberá buscar satisfacer las necesidades sociales, buscando un aumento de la calidad en la vida de la población y no sólo el aumento de la producción como meta principal}.
 
 % http://www.pagina12.com.ar/diario/universidad/10-209827-2012-12-14.html
 % Siempre entendió que las universidades y los centros de investigación debían estar al servicio de las necesidades populares y que, por lo mismo, la enseñanza y el aprendizaje debían apuntar al rigor y a la excelencia. Todo un jesuita este querido maestro y amigo.
