--- a/sabato.tex
+++ b/sabato.tex
@@ -1,7 +1,7 @@
 Abarcaré la posición de Jorge A. Sábato principalmente desde su artículo más conocido con Natalio Botana: \textit{La ciencia y
 la tecnología en el desarrollo futuro de América Latina}.
 
-En dicho artículo, los autores presentan un triangulo de relaciones (como el detallado en la Figura \ref{triangulo}) en el cual cada vértice
+En dicho artículo, los autores presentan un triángulo de relaciones (como el detallado en la Figura \ref{triangulo}) en el cual cada vértice
 corresponde a un actor:
 \begin{itemize}
     \item Gobierno: el conjunto de roles institucionales que tienen como objetivo formular políticas y movilizar recursos de y hacia los otros vértices a través de los procesos legislativo y administrativo.
@@ -12,7 +12,7 @@ corresponde a un actor:
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{imagenes/sabato.png}
-    \caption{Triangulo de Sábato/Botana}\label{triangulo}
+    \caption{Triángulo de Sábato/Botana}\label{triangulo}
 \end{figure}
 
 % Luego, cada vertice tiene responsabilidades y se espera que se relacione con los demás de ciertas maneras.
@@ -27,7 +27,7 @@ Sábato distingue tres tipos de relaciones posibles:
 
 \begin{itemize}
     \item \textit{Intrarelaciones}: las que suceden entre los diferentes componentes de un mismo vértice.
-    \item \textit{Interrelaciones}: las que suceden entre dos vértices de un mismo triangulo.
+    \item \textit{Interrelaciones}: las que suceden entre dos vértices de un mismo triángulo.
     \item \textit{Extrarelaciones}: las que suceden entre dos vértices de triángulos distintos.
 \end{itemize}
 
@@ -42,22 +42,22 @@ De las \textbf{intrarelaciones}, basta mencionar que deben estructurarse con vis
     \item El vértice-estructura productiva requiere \textit{capacidad empresarial}, publica o privada, que se puede definir según las ideas desarrolladas por Schumpeter, como aquella función que ``consiste en reformar o revolucionar el sistema de producción, explotando un invento o, de manera más general, una posibilidad técnica no experimentada para producir una mercancía nueva o una mercancía antigua por un método nuevo, para abrir una nueva fuente de previsión de materias primas o una nueva salida para los productos, para reorganizar una industria, etc''.
 \end{enumerate}
 
-El tercer ítem está fuertemente relacionado con las ideas de Bayer de que las políticas tecnológicas deben buscar explotar las potencialidades existentes. Creo además que Sábato concuerda con Bayer en que no solo hay que lograr innovar en tecnología, sino que ademas esta debe favorecer el desarrollo social y bienestar general.
+El tercer ítem está fuertemente relacionado con las ideas de Bayer de que las políticas tecnológicas deben buscar explotar las potencialidades existentes. Creo además que Sábato concuerda con Bayer en que no sólo hay que lograr innovar en tecnología, sino que ademas ésta debe favorecer el desarrollo social y bienestar general.
 
 \vspace{0.5em}
 
 En cuanto a las \textbf{interrelaciones}, Sábato les asigna una responsabilidad mayúscula: la generación de una capacidad de decisión propia en el campo científico-tecnológico es el \textit{resultado de un proceso deliberado de interrelaciones} entre el vértice-gobierno, el vértice-infraestructura científico-tecnológica y el vértice-estructura productiva.
-En mis palabras, Sábato nos dice que la conquista de la autonomía tecnológica depende de \textit{fuertemente} de las interrelaciones que logremos construir entre los vértices del triangulo.
+En mis palabras, Sábato nos dice que la conquista de la autonomía tecnológica depende \textit{fuertemente} de las interrelaciones que logremos construir entre los vértices del triángulo.
 
 Además, Sábato señala que el vértice de la infraestructura científico-tecnológica depende vitalmente de la acción deliberada del gobierno, entendido en un sentido muy amplio, sobre todo en lo que se refiere a asignación de recursos. Sin embargo, el vértice-gobierno juega también el papel de centro impulsor de demandas hacia la infraestructura científico-tecnológica, y es aquí donde reside la dificultad mayor en el modo como se concebirá la formulación de programas una vez tomada la decisión política.
 
-Esta idea concuerda con la posición de Bayer de que \textbf{debe existir una decisión política enmarcada en un proyecto de conquista de la autonomía nacional}. Es decir, que si el gobierno incrementa los recursos de los demás vértices, pero no hace demandas sobre estos, solo se conseguirá crecimiento aislado, que no contribuirá a la conquista de la autonomía. También es fácil ver que si un gobierno hace demandas sobre los vértices, pero no les provee con los recursos suficientes para funcionar, entonces los resultados obtenidos serán acotados o pobres en su calidad.
+Esta idea concuerda con la posición de Bayer de que \textbf{debe existir una decisión política enmarcada en un proyecto de conquista de la autonomía nacional}. Es decir, que si el gobierno incrementa los recursos de los demás vértices, pero no hace demandas sobre estos, sólo se conseguirá crecimiento aislado, que no contribuirá a la conquista de la autonomía. También es fácil ver que si un gobierno hace demandas sobre los vértices, pero no les provee con los recursos suficientes para funcionar, entonces los resultados obtenidos serán acotados o pobres en su calidad.
 
 \vspace{0.5em}
 
 En cuanto a las \textbf{extrarelaciones}, Sábato afirma: en una sociedad donde funciona el triángulo de relaciones, las aperturas que se realicen hacia el exterior en materia de exportación de ciencia y tecnología original o de adaptación de tecnología importada, producen beneficios reales, ya sea a corto o largo plazo.
 
-Muy distinto es cuando estas aperturas se realizan entre vértices aislados con un triangulo plenamente desarrollado. Este problema es muy característico de las sociedades latinoamericanas, y explica un sin fin de problemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el científico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automáticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
+Muy distinto es cuando estas aperturas se realizan entre vértices aislados con un triángulo plenamente desarrollado. Este problema es muy característico de las sociedades latinoamericanas, y explica un sin fin de problemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el científico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automáticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
 
 Creo que estas ideas ponen todavía más de manifiesto que Sábato concuerda con Bayer, en la necesidad de un proyecto claro a nivel nacional que busque la autonomía, ya que además comprende que la falta de este trae problemas graves que aumentan la dependencia.
 
@@ -100,7 +100,7 @@ Por último, quisiera dar un ejemplo concreto que presenta Sábato en su artícu
 %     Lo contrario sería la desagregacion de paquetes tecnologicos, es decir: una participacion de componentes nacionales.
 %
 % - dependencia tecnologica: incorporación sumisa de las tecnologías disponibles por razones de disponibilidades y precios en el mercado.
-% - autonomia: capacidad de desarrollo local: construir el triangulo, interrelacinando los tres vertices. Solo puede pasar si el estado tiene
+% - autonomia: capacidad de desarrollo local: construir el triángulo, interrelacinando los tres vertices. Solo puede pasar si el estado tiene
 %     una participacion clave en la estructura productiva.
 % - presidente de SERBA: Empieza identificando cuales son los productos en los cuales puede haber desarrollo
 %     tecnologico local y en los cuales podíamos prescindir de componentes importados.
