--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -3,7 +3,7 @@
 
  \subsection{Comparación con la posición del desarrollismo}
 
- El planteo general del desarrollismo es :
+ El planteo general del desarrollismo es:
 % Youtube: Prebisch y los terminos de intercambio https://www.youtube.com/watch?v=sqUQQX1dTx8
  \begin{itemize}
      \item Los términos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplían la brecha entre países desarrollados y subdesarrollados. Esto es lo que se conoce como la Tesis Prebisch-Singer.
@@ -13,6 +13,8 @@
  \end{itemize}
 
  Entonces los países en vías de desarrollo deben:
+
+ % PRIMERA CORRECCION: de qué manera aparecen estas ideas dentro del ideario ?
 
  \begin{itemize}
      \item Buscar la diversificación productiva e integración regional:  superar la limitada diversificación productiva y la heterogeneidad estructural.
@@ -31,6 +33,6 @@
  Y las \textbf{diferencias}:
 
  \begin{itemize}
-     \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, baja dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''. Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y creo que Bayer estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
+     \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, menor dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''. Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y creo que Bayer estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
 
  \end{itemize}
