--- a/referencias.tex
+++ b/referencias.tex
@@ -4,5 +4,6 @@
     \item \textit{Empresas y fábricas de tecnologías}, Jorge A. Sábato
     \item \textit{Charla del 2006 en FCEyN, UBA}, Rolando V. García
     \item \textit{Ciencia, política y concepción del mundo}, Rolando V. García
+    \item \textit{Commercial policy in the underdeveloped countries}, Raúl Prebisch
     \item \textit{Prebisch y los términos de intercambio}, Youtube: \texttt{https://www.youtube.com/watch?v=sqUQQX1dTx8}
 \end{itemize}
