--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -3,36 +3,41 @@
 
  \subsection{Comparación con la posición del desarrollismo}
 
- El planteo general del desarrollismo es:
+ El planteo general del desarrollismo surge luego de la crisis mundial de 1929, con trabajos como la Tesis Prebisch-Singer que afirma que:
+ \textit{los términos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplían la brecha entre países desarrollados y subdesarrollados.}
+
+
+Otras posiciones centrales del desarrollismo se pueden encontrar en el artículo \textit{Commercial policy in the underdeveloped countries}, también de Prebisch:
+
 % Youtube: Prebisch y los terminos de intercambio https://www.youtube.com/watch?v=sqUQQX1dTx8
  \begin{itemize}
-     \item Los términos de intercambio en el comercio internacional, con un esquema centro industrial-periferia agrícola, tienden a caer a lo largo del tiempo,  y amplían la brecha entre países desarrollados y subdesarrollados. Esto es lo que se conoce como la Tesis Prebisch-Singer.
-     \item Los países subdesarrollados deberían combatir este hecho mediante Estados activos, con políticas económicas que impulsen la industrialización, para romper así la asimetría que genera el sistema capitalista dentro de los intercambios internacionales, y alcanzar la autonomía.
-    %  \item En vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
-    \item La amplitud de los ciclos económicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza económica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caída.
+
+
+    \item La industrialización es una parte ineludible en el proceso de cambio que acompaña un aumento gradual del ingreso per cápita.
+    \item Además, no sirve que solo se tecnifiquen los sectores primarios, ya que en vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
+    \item Por lo tanto, la tecnificación de los sectores primarios puede ser favorable, pero debe estar siempre acompañada de un proceso más abarcativo y general de industrialización.
+    \item En particular, Prebisch dice que la substitución de importaciones es la única forma de corregir los efectos de las disparidades en la elasticidad del comercio extranjero, de forma de lograr un adecuado crecimiento de los países periféricos.
+    \item Sumado a lo anterior, la amplitud de los ciclos económicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza económica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caída.
  \end{itemize}
 
- Entonces los países en vías de desarrollo deben:
-
- % PRIMERA CORRECCION: de qué manera aparecen estas ideas dentro del ideario ?
+Luego, en ese mismo artículo Prebisch menciona algunos puntos centrales que deberían seguir los países en vías de desarrollo para combatir las desventajas de su posición, y así romper la asimetría que genera el sistema capitalista dentro de los intercambios internacionales, lo cual, en mi opinión, permitiría lograr una menor dependencia de los países centrales y aumentar la autonomía:
 
  \begin{itemize}
-     \item Buscar la diversificación productiva e integración regional:  superar la limitada diversificación productiva y la heterogeneidad estructural.
-     \item Buscar el desarrollo con igualdad: promover un desarrollo con equidad, cimentado en los cambios en la estructura productiva.
-     \item Buscar una nueva inserción en el orden mundial: transformar las formas de inserción de América Latina en el orden mundial
+     \item Mantener Estados activos, con políticas económicas que impulsen la industrialización.
+     \item Utilizar medidas proteccionistas para disminuir los efectos del libre mercado en el crecimiento.
+     \item Teniendo en cuenta que, a medida que la productividad y los salarios mejoran, las medidas proteccionistas deben ir bajando de forma gradual hasta que sean completamente eliminadas.
  \end{itemize}
 
- Las \textbf{similitudes} con la posición de Bayer son:
+ Las \textbf{similitudes} que encuentro con la posición de Bayer son:
 
  \begin{itemize}
      \item Un fuerte énfasis en la existencia de patrones de dependencia que mantienen a las naciones en vías de desarrollo en tal estado.
      \item Y que a su vez, hace falta un proyecto de Estado con políticas claras de conquista de la autonomía.
-     \item Haciendo énfasis en un desarrollo con equidad.
  \end{itemize}
 
  Y las \textbf{diferencias}:
 
  \begin{itemize}
      \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, menor dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''. Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y creo que Bayer estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
-
+     \item En las ideas centrales del desarrollismo, y en particular en el artículo que analicé de Prebisch, se habla mucho del crecimiento de un país como el aumento del ingreso per cápita, pero hoy en día sabemos que dicha mejora no necesariamente equivale a un desarrollo con equidad y bienestar social. Por lo tanto, encuentro que una de las criticas fuertes que podría hacerle Bayer al modelo desarrollista, es una falta de medidas que además de contemplar el crecimiento de los países en vías de desarrollo, contemplen la distribución de las riquezas generadas.
  \end{itemize}
