--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -14,9 +14,9 @@ Otras posiciones centrales del desarrollismo se pueden encontrar en el artículo
 
 
     \item La industrialización es una parte ineludible en el proceso de cambio que acompaña un aumento gradual del ingreso per cápita.
-    \item Además, no sirve que solo se tecnifiquen los sectores primarios, ya que en vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
+    \item Además, no sirve que sólo se tecnifiquen los sectores primarios, ya que en vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
     \item Por lo tanto, la tecnificación de los sectores primarios puede ser favorable, pero debe estar siempre acompañada de un proceso más abarcativo y general de industrialización.
-    \item En particular, Prebisch dice que la substitución de importaciones es la única forma de corregir los efectos de las disparidades en la elasticidad del comercio extranjero, de forma de lograr un adecuado crecimiento de los países periféricos.
+    \item En particular, Prebisch dice que la sustitución de importaciones es la única forma de corregir los efectos de las disparidades en la elasticidad del comercio extranjero, de forma de lograr un adecuado crecimiento de los países periféricos.
     \item Sumado a lo anterior, la amplitud de los ciclos económicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza económica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caída.
  \end{itemize}
 
@@ -39,5 +39,5 @@ Luego, en ese mismo artículo Prebisch menciona algunos puntos centrales que deb
 
  \begin{itemize}
      \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, menor dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''. Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y creo que Bayer estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
-     \item En las ideas centrales del desarrollismo, y en particular en el artículo que analicé de Prebisch, se habla mucho del crecimiento de un país como el aumento del ingreso per cápita, pero hoy en día sabemos que dicha mejora no necesariamente equivale a un desarrollo con equidad y bienestar social. Por lo tanto, encuentro que una de las criticas fuertes que podría hacerle Bayer al modelo desarrollista, es una falta de medidas que además de contemplar el crecimiento de los países en vías de desarrollo, contemplen la distribución de las riquezas generadas.
+     \item En las ideas centrales del desarrollismo, y en particular en el artículo que analicé de Prebisch, se habla mucho del crecimiento de un país como el aumento del ingreso per cápita, pero hoy en día sabemos que dicha mejora no necesariamente equivale a un desarrollo con equidad y bienestar social. Por lo tanto, encuentro que una de las críticas fuertes que podría hacerle Bayer al modelo desarrollista, es una falta de medidas que además de contemplar el crecimiento de los países en vías de desarrollo, contemplen la distribución de las riquezas generadas.
  \end{itemize}
