Re-escribo algunas oraciones que eran mi opinion

--- a/sabato.tex
+++ b/sabato.tex
@@ -42,12 +42,14 @@ De las \textbf{intrarelaciones}, basta mencionar que deben estructurarse con vis
     \item El vértice-estructura productiva requiere \textit{capacidad empresarial}, publica o privada, que se puede definir según las ideas desarrolladas por Schumpeter, como aquella función que ``consiste en reformar o revolucionar el sistema de producción, explotando un invento o, de manera más general, una posibilidad técnica no experimentada para producir una mercancía nueva o una mercancía antigua por un método nuevo, para abrir una nueva fuente de previsión de materias primas o una nueva salida para los productos, para reorganizar una industria, etc''.
 \end{enumerate}
 
-El tercer ítem está fuertemente relacionado con las ideas de Bayer de que las políticas tecnológicas deben buscar explotar las potencialidades existentes. Creo además que Sábato concuerda con Bayer en que no sólo hay que lograr innovar en tecnología, sino que ademas ésta debe favorecer el desarrollo social y bienestar general.
+El tercer ítem está fuertemente relacionado con las ideas de Bayer de que las políticas tecnológicas deben buscar explotar las potencialidades existentes.
+
+En este sentido, Sábato muestra estar de acuerdo con Bayer en que no sólo hay que lograr innovar en tecnología, sino que ademas ésta debe favorecer el desarrollo social y bienestar general.
 
 \vspace{0.5em}
 
 En cuanto a las \textbf{interrelaciones}, Sábato les asigna una responsabilidad mayúscula: la generación de una capacidad de decisión propia en el campo científico-tecnológico es el \textit{resultado de un proceso deliberado de interrelaciones} entre el vértice-gobierno, el vértice-infraestructura científico-tecnológica y el vértice-estructura productiva.
-En mis palabras, Sábato nos dice que la conquista de la autonomía tecnológica depende \textit{fuertemente} de las interrelaciones que logremos construir entre los vértices del triángulo.
+Es decir, que la conquista de la autonomía tecnológica depende \textit{fuertemente} de las interrelaciones que logremos construir entre los vértices del triángulo.
 
 Además, Sábato señala que el vértice de la infraestructura científico-tecnológica depende vitalmente de la acción deliberada del gobierno, entendido en un sentido muy amplio, sobre todo en lo que se refiere a asignación de recursos. Sin embargo, el vértice-gobierno juega también el papel de centro impulsor de demandas hacia la infraestructura científico-tecnológica, y es aquí donde reside la dificultad mayor en el modo como se concebirá la formulación de programas una vez tomada la decisión política.
 
@@ -59,7 +61,7 @@ En cuanto a las \textbf{extrarelaciones}, Sábato afirma: en una sociedad donde 
 
 Muy distinto es cuando estas aperturas se realizan entre vértices aislados con un triángulo plenamente desarrollado. Este problema es muy característico de las sociedades latinoamericanas, y explica un sin fin de problemas, como por ejemplo el éxodo de talentos. Mientras en nuestras sociedades el científico se encuentra desvinculado y aislado frente al gobierno y a la estructura productiva, en el nuevo lugar de trabajo, al cual lo conduce su exilio cultural, está automáticamente amparado por instituciones o centros de investigación que, a su vez, se encuentran insertos en el sistema de relaciones planteado.
 
-Creo que estas ideas ponen todavía más de manifiesto que Sábato concuerda con Bayer, en la necesidad de un proyecto claro a nivel nacional que busque la autonomía, ya que además comprende que la falta de este trae problemas graves que aumentan la dependencia.
+En este punto es interesante hacer notar otra similitud entre el pensamiento de Sábato y Bayer: la percepción de que se necesita un proyecto claro a nivel nacional que busque la autonomía, ya que la falta de este trae problemas graves que aumentan la dependencia.
 
 \vspace{0.5em}
 
