--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -6,6 +6,6 @@ Quiero hacer notar que, de todos los autores, encuentro en Sábato la mayor riqu
 En cuanto a García, creo que estaría de acuerdo con Bayer y Sábato en materia de autonomía nacional, pero me queda por analizar más a fondo cual era su postura en cuanto a política tecnológica.
 
 Encuentro en los 3 autores mencionados muchas de las ideas del desarrollismo (una participación activa del Estado, necesidad de industrialización, etc.), y creo que podrían considerarse desarrollistas, hasta cierto punto.
-Sin embargo, analizando más a fondo las ideas centrales del desarrollismo, pareciera ser que el enfoque está puesto plenamente en buscar políticas de estado que permitan un mayor crecimiento a los países en vías de desarrollo, contrarrestando la caída de los términos de intercambio a largo plazo, esperando que dicho crecimiento se \textit{derrame} de alguna forma en toda la sociedad. Creo que los demás autores analizados estarían fuertemente en contra de esto, marcando que hacen falta políticas claras de distribución de la riqueza y bienestar social, para que el crecimiento logrado no caiga en unas pocas manos.
+Sin embargo, analizando más a fondo las ideas centrales del desarrollismo, pareciera ser que el enfoque está puesto plenamente en buscar políticas de estado que permitan un mayor crecimiento a los países en vías de desarrollo, contrarrestando la caída de los términos de intercambio a largo plazo, esperando que dicho crecimiento se \textit{derrame} de alguna forma en toda la sociedad. En base a las posiciones analizadas de los demás autores, puedo afirmar que estarían fuertemente en contra de esto, marcando que hacen falta políticas claras de distribución de la riqueza y bienestar social, para que el crecimiento logrado no caiga en unas pocas manos.
 
 Por último, no encontré diferencias fuertes en las ideas principales de los diferentes autores (Bayer, Sábato y García), sino diferencias de enfoques.
