--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -11,8 +11,6 @@ Otras posiciones centrales del desarrollismo se pueden encontrar en el artículo
 
 % Youtube: Prebisch y los terminos de intercambio https://www.youtube.com/watch?v=sqUQQX1dTx8
  \begin{itemize}
-
-
     \item La industrialización es una parte ineludible en el proceso de cambio que acompaña un aumento gradual del ingreso per cápita.
     \item Además, no sirve que sólo se tecnifiquen los sectores primarios, ya que en vez de que los trabajadores o los empresarios ganen más por ser más eficientes, los precios de los productos bajan, lo que beneficia a los países más ricos.
     \item Por lo tanto, la tecnificación de los sectores primarios puede ser favorable, pero debe estar siempre acompañada de un proceso más abarcativo y general de industrialización.
@@ -20,7 +18,7 @@ Otras posiciones centrales del desarrollismo se pueden encontrar en el artículo
     \item Sumado a lo anterior, la amplitud de los ciclos económicos en los países de la periferia es mayor que en los países del centro: cuando hay bonanza económica los precios de las materias primas aumentan porque aumenta la demanda, pero cuando hay contracciones estos caen aún más porque no hay mecanismos institucionales que frenen esa caída.
  \end{itemize}
 
-Luego, en ese mismo artículo Prebisch menciona algunos puntos centrales que deberían seguir los países en vías de desarrollo para combatir las desventajas de su posición, y así romper la asimetría que genera el sistema capitalista dentro de los intercambios internacionales, lo cual, en mi opinión, permitiría lograr una menor dependencia de los países centrales y aumentar la autonomía:
+Luego, en ese mismo artículo Prebisch menciona algunos puntos que deberían seguir los países en vías de desarrollo para combatir las desventajas de su posición, y así romper la asimetría que genera el sistema capitalista dentro de los intercambios internacionales.
 
  \begin{itemize}
      \item Mantener Estados activos, con políticas económicas que impulsen la industrialización.
@@ -28,7 +26,7 @@ Luego, en ese mismo artículo Prebisch menciona algunos puntos centrales que deb
      \item Teniendo en cuenta que, a medida que la productividad y los salarios mejoran, las medidas proteccionistas deben ir bajando de forma gradual hasta que sean completamente eliminadas.
  \end{itemize}
 
- Las \textbf{similitudes} que encuentro con la posición de Bayer son:
+ Si los analizamos desde la posición de Bayer, es claro que estos puntos apuntan a lograr una menor dependencia de los países centrales y por lo tanto aumentar la autonomía. Otras \textbf{similitudes} que encuentro con la posición de Bayer son:
 
  \begin{itemize}
      \item Un fuerte énfasis en la existencia de patrones de dependencia que mantienen a las naciones en vías de desarrollo en tal estado.
@@ -38,6 +36,10 @@ Luego, en ese mismo artículo Prebisch menciona algunos puntos centrales que deb
  Y las \textbf{diferencias}:
 
  \begin{itemize}
-     \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, menor dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''. Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y creo que Bayer estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
-     \item En las ideas centrales del desarrollismo, y en particular en el artículo que analicé de Prebisch, se habla mucho del crecimiento de un país como el aumento del ingreso per cápita, pero hoy en día sabemos que dicha mejora no necesariamente equivale a un desarrollo con equidad y bienestar social. Por lo tanto, encuentro que una de las críticas fuertes que podría hacerle Bayer al modelo desarrollista, es una falta de medidas que además de contemplar el crecimiento de los países en vías de desarrollo, contemplen la distribución de las riquezas generadas.
+     \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, menor dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''.
+        Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y Bayer probablemente estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
+
+     \item En las ideas centrales del desarrollismo, y en particular en el artículo analizado de Prebisch, se habla del crecimiento de un país como el aumento del ingreso per cápita. Si bien apuntar al incremento de ésta métrica parecería ser algo positivo, no necesariamente equivale a un desarrollo con equidad y bienestar social, y de hecho esconde a veces un elevado grado de desigualdad social.
+
+        Por lo tanto, una de las críticas fuertes que le haría Bayer al modelo desarrollista es una falta de medidas que no sólo busquen el crecimiento de los países en vías de desarrollo, sino que lo hagan apuntando a mejorar el bienestar social (por ejemplo, mirando cual es la distribución de las riquezas generadas).
  \end{itemize}
