--- a/rolando.tex
+++ b/rolando.tex
@@ -1,4 +1,4 @@
-Debido a la dificultad de encontrar textos específicos de Rolando García que hablen de políticas tecnológicas, trataré de abarcar su posición en el tema principalmente desde la charla que dio en el 2006 en la FCEyN.
+Debido a la dificultad de encontrar textos específicos de Rolando García que hablen de políticas tecnológicas, trataré de abarcar su posición en el tema principalmente desde la charla que dio en el 2006 en la FCEyN, UBA.
 
 En dicha charla, García menciona que:
 
@@ -8,9 +8,9 @@ En dicha charla, García menciona que:
     \item ``En el contexto particular de las universidades se discute mucho más sobre problemáticas puntuales que sobre el proyecto institucional en el que deberían de estar inscritas. Y es necesario subrayar que existe una gran diferencia entre un proyecto institucional y un programa de medidas propuestas o adoptadas en la coyuntura''.
 \end{itemize}
 
-Con lo cual me inclino a pensar que García entiende, como Bayer, que la conquista de la autonomía de los países en vías de desarrollo no se puede lograr de manera vegetativa, sin tomar acciones concretas al respecto. Es necesario buscar nuevas alternativas que permitan romper el ciclo de dependencia (lo que Bayer llama, explotar las potencialidades existentes).
+Estas ideas muestran que García, al igual que Bayer, entiende que la conquista de la autonomía de los países en vías de desarrollo no se puede lograr de manera vegetativa, sin tomar acciones concretas al respecto, sino que es necesario buscar nuevas alternativas que permitan romper el ciclo de dependencia (lo que Bayer llama, explotar las potencialidades existentes).
 
-Aún más, creo que concordarían en que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista (y luego mantenimiento) de la autonomía.
+Además, ambos muestran en su pensamiento que no basta que ciertos actores particulares del sistema tomen algunas acciones concretas, sino que hacen falta políticas de estado que se enmarquen en un proyecto de conquista (y luego mantenimiento) de la autonomía.
 
 Con respecto a la autonomía universitaria, García dice:
 
@@ -20,7 +20,7 @@ Con respecto a la autonomía universitaria, García dice:
     % \item ``Cuando nos propusimos reconstruir la Universidad, en los años 50, enfrentamos una situación comparable en cierta medida. No era suficiente con modificar los planes de estudio, construir nuevos edificios y sustituir el personal docente y administrativo. Era necesario replantear La estructura de la institución, sus objetivos y su funcionamiento, para lo cual se requería mantener a ultranza la autonomía de la gestión. A partir de allí, \textbf{construir lo posible} significó encontrar los medios necesarios para poner en práctica la profunda reforma que nos planteamos como meta''
 \end{itemize}
 
-Creo firmemente que en este punto García estaría de acuerdo con la posición de Bayer, en que \textit{la política tecnológica deberá buscar satisfacer las necesidades sociales, buscando un aumento de la calidad en la vida de la población y no sólo el aumento de la producción como meta principal}.
+Lo que muestra que García comparte con Bayer la posición de que \textit{la política tecnológica deberá buscar satisfacer las necesidades sociales, buscando un aumento de la calidad en la vida de la población y no sólo el aumento de la producción como meta principal}.
 
 % http://www.pagina12.com.ar/diario/universidad/10-209827-2012-12-14.html
 % Siempre entendió que las universidades y los centros de investigación debían estar al servicio de las necesidades populares y que, por lo mismo, la enseñanza y el aprendizaje debían apuntar al rigor y a la excelencia. Todo un jesuita este querido maestro y amigo.
