--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -1,7 +1,6 @@
-Para concluir, quisiera mencionar que encuentro muchas similitudes entre las opiniones de Bayer, Sábato, García y el desarrollismo,
-probablemente por ser pensamientos de una misma corriente (aunque el desarrollismo se inició por el 1930).
+Para concluir, quisiera mencionar que encuentro muchas similitudes entre las opiniones de Bayer, Sábato, García y el desarrollismo, probablemente por ser pensamientos de una misma corriente (aunque el desarrollismo se inició por el 1930).
 
-Quiero hacer notar que, de todos los autores, encuentro en Sábato la mayor riqueza para analizar en cuanto a políticas tecnológicas, ya que se dedico a ese tema en particular con mucho énfasis. Si bien Bayer se enfoca principalmente en el tema de la autonomía nacional, el análisis que hace de las políticas tecnológicas es similar al que realiza Sábato, y seguramente ambos coincidirían en muchos puntos, principalmente en el rol y responsabilidades del Estado a la hora de conquistar la autonomía.
+Quiero hacer notar que, de todos los autores, encuentro en Sábato la mayor riqueza para analizar en cuanto a políticas tecnológicas, ya que se dedico a ese tema en particular con mucho énfasis. Si bien Bayer se enfoca principalmente en el tema de la autonomía nacional, el análisis que hace de las políticas tecnológicas es similar al que realiza Sábato por lo que ambos coincidirían en muchos puntos, principalmente en el rol y responsabilidades del Estado a la hora de conquistar la autonomía.
 
 En cuanto a García, creo que estaría de acuerdo con Bayer y Sábato en materia de autonomía nacional, pero me queda por analizar más a fondo cual era su postura en cuanto a política tecnológica.
 
