--- a/pregunta-2.tex
+++ b/pregunta-2.tex
@@ -37,7 +37,7 @@ Luego, en ese mismo artículo Prebisch menciona algunos puntos que deberían seg
 
  \begin{itemize}
      \item Después de la Segunda Guerra Mundial, muchos países (con un enfoque desarrollista) de América Latina deciden adoptar el modelo de Industrialización por Sustitución de Importaciones, que buscaba dejar de importar productos extranjeros y comenzar a consumir los producidos en el país de origen. Si bien este modelo trae consecuencias positivas como aumento del empleo, menor dependencia de los mercados extranjeros, mejora de los términos de intercambio, etc., también puede traer consecuencias negativas como la dependencia tecnológica cuando se importan nuevas tecnologías a ``paquete cerrado''.
-        Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y Bayer probablemente estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías.
+        Esto último se resuelve generalmente tratando de realizar una desagregación de los paquetes tecnológicos, y Bayer probablemente estaría de acuerdo en no hacer una importación \textit{ciega} de nuevas tecnologías, ya que de lo contrario no se estaría conquistando autonomía sino ahondando en los patrones de dependencia.
 
      \item En las ideas centrales del desarrollismo, y en particular en el artículo analizado de Prebisch, se habla del crecimiento de un país como el aumento del ingreso per cápita. Si bien apuntar al incremento de ésta métrica parecería ser algo positivo, no necesariamente equivale a un desarrollo con equidad y bienestar social, y de hecho esconde a veces un elevado grado de desigualdad social.
 
