--- a/sabato.tex
+++ b/sabato.tex
@@ -44,7 +44,7 @@ De las \textbf{intrarelaciones}, basta mencionar que deben estructurarse con vis
 
 El tercer ítem está fuertemente relacionado con las ideas de Bayer de que las políticas tecnológicas deben buscar explotar las potencialidades existentes.
 
-En este sentido, Sábato muestra estar de acuerdo con Bayer en que no sólo hay que lograr innovar en tecnología, sino que ademas ésta debe favorecer el desarrollo social y bienestar general.
+% En este sentido, Sábato muestra estar de acuerdo con Bayer en que no sólo hay que lograr innovar en tecnología, sino que ademas ésta debe favorecer el desarrollo social y bienestar general.
 
 \vspace{0.5em}
 
